Use Framework's Vulkan wrapper.
Allows loading Vulkan at runtime.

--- a/Source/gs/GSH_Vulkan/CMakeLists.txt
+++ b/Source/gs/GSH_Vulkan/CMakeLists.txt
@@ -11,9 +11,18 @@ project(GSH_Vulkan)
 
 find_package(Vulkan REQUIRED)
 
-add_library(gsh_vulkan STATIC 
+if(NOT TARGET Framework_Vulkan)
+	add_subdirectory(
+		${CMAKE_CURRENT_SOURCE_DIR}/../../../deps/Framework/build_cmake/FrameworkVulkan
+		${CMAKE_CURRENT_BINARY_DIR}/FrameworkVulkan
+	)
+endif()
+list(APPEND PROJECT_LIBS Framework_Vulkan)
+
+add_library(gsh_vulkan STATIC
 	GSH_Vulkan.cpp
 	GSH_Vulkan.h
 )
-target_link_libraries(gsh_vulkan ${PROJECT_LIBS} ${VULKAN_LIBRARY})
+
+target_link_libraries(gsh_vulkan ${PROJECT_LIBS})
 target_include_directories(gsh_vulkan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Source/gs/GSH_Vulkan/ ${VULKAN_INCLUDE_DIR})
